crates/reinhardt-forms/crates/macros/tests/ui/fail/conflicting_properties.stderr
error: form! macro is not yet implemented
  --> tests/ui/fail/conflicting_properties.rs:8:15
   |
8  |       let _form = form! {
   |  _______________^
9  | |         fields: {
10 | |             username: CharField {
11 | |                 min_length: 10,
12 | |                 max_length: 5,
13 | |             },
14 | |         },
15 | |     };
   |  |_____^
   |
   = note: this error originates in the macro `form` (in Nightly builds, run with -Z macro-backtrace for more info)
